# Galahad

./: .gitattributes  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_NOTES.md  INDEX.md  LICENSE  PLAN.MD  README.md  VERSION_HISTORY.md
GalahadAI/: LancelotAI.csproj  Program.cs
GalahadAI/Memory/: Evolution.cs  IMemoryStore.cs  LongTermMemory.cs  LongTermMemoryTests.cs  Memory.cs  MemoryManager.cs  MemoryTests.cs  OllamaEmbeddingGenerator.cs  ShortTermMemory.cs  WarmMemory.cs
data/: evolution.db  long_term_memory.db
data/warm_memory/: expiring.json  test1.json  test2.json  test3.json
examples/: collaborative_evolution.rs  evolve.rs  generate.rs  model_generate.rs  process_monitor.rs
galahad/: docker-compose.yml
galahad/backend/: Dockerfile  pyproject.toml
galahad/backend/src/api/: main.py
galahad/backend/src/core/graph/: workflow.py
galahad/backend/src/core/memory/: vector_store.py
galahad/frontend/: package-lock.json  package.json
galahad/frontend/src/components/: AgentManager.tsx
